--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = devel
 [submodule "lib/ansible/modules/extras"]
 	path = lib/ansible/modules/extras
-	url = https://github.com/ansible/ansible-modules-extras.git
-	branch = devel
+	url = https://github.com/dresden-weekly/ansible-modules-extras.git
+	branch = fix-chocolatey
